pavel-07-23-rf парсинг уровня 1 из json

--- a/templates/first_level.html.twig
+++ b/templates/first_level.html.twig
@@ -16,7 +16,10 @@
   <script src="script/Shield.js"></script>
   <script src="script/Health.js"></script>
   <script src="script/Portal.js"></script>
+
   <script src="script/level1.js"></script>
+  <script src="script/TextureLoader.js"></script>
+  
   <script src="script/Wall.js"></script>
   <link rel="stylesheet" href="css/level_style.css"/>
 </head>
