--- a/templates/second_level.html.twig
+++ b/templates/second_level.html.twig
@@ -22,6 +22,7 @@
   <script src="script/Health.js"></script>
   <script src="script/Portal.js"></script>
   <script src="script/level2.js"></script>
+  <script src="script/TextureLoader.js"></script>
   <link rel="stylesheet" href="css/level_style.css"/>
 </head>
 <body>
