--- a/templates/third_level.html.twig
+++ b/templates/third_level.html.twig
@@ -24,6 +24,7 @@
   <script src="script/Boss.js"></script>
   <script src="script/Shot.js"></script>
   <script src="script/level3.js"></script>
+  <script src="script/TextureLoader.js"></script>
   <link rel="stylesheet" href="css/level_style.css"/>
 </head>
 <body>
