misha-07-22-rating-style-improvements поправил стили рейтинга

--- a/public/css/rating_style.css
+++ b/public/css/rating_style.css
@@ -67,6 +67,10 @@ body {
     overflow: auto;
 }
 
+.table__score {
+    float: right;
+}
+
 h2 {
     font: 800 30px/34px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
