--- a/templates/third_level.html.twig
+++ b/templates/third_level.html.twig
@@ -3,31 +3,25 @@
 <head>
   <title>Third Level</title>
   <script src="script/pixi.js"></script>
-  <script src="script/Bullet.js"></script>
-  <script src="script/Experience.js"></script>
-  <script src="script/Fireball.js"></script>
-  <script src="script/Hero.js"></script>
-  <script src="script/Enemy.js"></script>
-  <script src="script/Devil.js"></script>
-  <script src="script/Bat.js"></script>
-  <script src="script/Poison.js"></script>
-  <script src="script/Fire.js"></script>
-  <script src="script/Mushroom.js"></script>
-  <script src="script/Smoke.js"></script>
-  <script src="script/Ground.js"></script>
-  <script src="script/Stalactite.js"></script>
-  <script src="script/Wall.js"></script>
-  <script src="script/WoodenPlank.js"></script>
-  <script src="script/Shield.js"></script>
-  <script src="script/Health.js"></script>
-  <script src="script/Portal.js"></script>
-  <script src="script/Boss.js"></script>
-  <script src="script/Shot.js"></script>
-  <script src="script/level3.js"></script>
+  <script src="script/other/Bullet.js"></script>
+  <script src="script/other/Experience.js"></script>
+  <script src="script/other/Fireball.js"></script>
+  <script src="script/obstacles/Stalactite.js"></script>
+  <script src="script/characters/Hero.js"></script>
+  <script src="script/characters/Devil.js"></script>
+  <script src="script/objects/Ground.js"></script>
+  <script src="script/other/Shield.js"></script>
+  <script src="script/other/Health.js"></script>
+  <script src="script/other/Portal.js"></script>
+  <script src="script/objects/Wall.js"></script>
+  <script src="script/obstacles/Fire.js"></script>
+  <script src="script/characters/Boss.js"></script>
+  <script src="script/other/Shot.js"></script>
+  <script src="script/levels/level3.js"></script>
   <script src="script/TextureLoader.js"></script>
   <link rel="stylesheet" href="css/level_style.css"/>
 </head>
 <body>
-<script src="script/index.js"></script>
+  <script src="script/index.js"></script>
 </body>
 </html>
