--- a/templates/demon_kombat_screensaver.html.twig
+++ b/templates/demon_kombat_screensaver.html.twig
@@ -3,9 +3,20 @@
 <head>
     <title>Demon Kombat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="css/demon_kombat_style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/demon_kombat_screensaver_style.css"/>
 </head>
 <body>
-<img class="demon-kombat-qr" src="images/demon_kombat_qr.png" alt="demon">
+<div class="main">
+    <div class="congrats">
+        <h1 class="congrats__title">Поздравляем! Вы сокрушили Демона и спасли мир! Ваши подвиги войдут в легенды!</h1>
+    </div>
+    <img class="demon_dead_image" src="images/Enemy/demon_dead.png" alt="demon dead">
+    <div class="qr">
+        <h2 class="qr__title">Хотите заработать больше очков?</h2>
+        <img class="qr__demon-kombat" src="/qrcode-generate" alt="demon">
+    </div>
+</div>
 </body>
 </html>
