misha-07-24-form-improvements поменял стили у форм регистрации и авторизации

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -54,7 +54,7 @@
     const preloader = document.getElementById('preloader');
     let username = document.getElementById('username').value;
     let opponentname = 'bot';
-    const ws = new WebSocket('ws://localhost:8080');
+    const ws = new WebSocket('ws://10.250.104.87:8080');
     let isConnected = false;
     const messageQueue = [];
 
