--- a/templates/signup_user_form.html.twig
+++ b/templates/signup_user_form.html.twig
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="form" class=" form">
-    <form action="/signup" method="post">
+    <form class="form__block" action="/signup" method="post">
         <span class="error-text">{{ error.username ?? '' }}</span>
         <div class="field border fill responsive input">
             <input name="username" id="username" type="text" placeholder="имя">
