--- a/public/css/signup_style.css
+++ b/public/css/signup_style.css
@@ -21,9 +21,13 @@ body {
     width: 810px;
     height: 624px;
     margin: 100px auto 0 auto;
-    padding: 80px 175px 0 175px;
+    padding: 80px 125px 0 125px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 20px;
+}
+
+.form__block {
+    margin: 30px 0 80px 0;
 }
 
 .input {
@@ -34,7 +38,7 @@ body {
 }
 
 .button-signin {
-    height: 82px;
+    height: 58px;
     background-color: rgba(4, 0, 200, 1);
     margin: 0 0 38px 0;
     font: 400 22px/26px "Russo One", sans-serif;
@@ -45,14 +49,14 @@ body {
 }
 
 .button-signup {
-    height: 82px;
+    height: 58px;
     border: 1px solid rgba(255, 255, 255, 1);
     background-color: transparent;
     font: 400 22px/26px "Russo One", sans-serif;
 }
 
 .form__text {
-    font: 400 22px/26px "Russo One", sans-serif;
+    font: 400 30px/32px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
 }
 
