--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -25,5 +25,24 @@
     </a>
   </div>
   <a class="signout" type="submit" href="/user/signout">Выйти</a>
+  <script>
+  let audio = new Audio('/sounds/doom.mp3');
+      let music = false;
+      audio.volume = 1;
+      audio.loop = true;
+
+      function startMusic() {
+        audio.load();
+        audio.play();
+        music = true;
+      }
+
+      document.addEventListener('mousemove', function()
+      {
+          if (music === false) {
+            startMusic();
+          }
+      });
+</script>
 </body>
 </html>
