--- a/templates/screensaver.html.twig
+++ b/templates/screensaver.html.twig
@@ -13,6 +13,24 @@
   <h1 class="center-align title">Demon Deliverance</h1>
   <p class="center-align middle-align continue">Нажмите любую клавишу, чтобы продолжить</p>
   <script>
+      let audio = new Audio('/sounds/doom.mp3');
+      let music = false;
+      audio.volume = 1;
+      audio.loop = true;
+
+      function startMusic() {
+        audio.load();
+        audio.play();
+        music = true;
+      }
+
+      document.addEventListener('mousemove', function()
+      {
+          if (music === false) {
+            startMusic();
+          }
+      });
+
       document.addEventListener('keydown', function()
       {
           window.location.href = '/user/signin';
