misha-07-23-demon-kombat поменял ip

--- a/templates/demon_kombat_screensaver.html.twig
+++ b/templates/demon_kombat_screensaver.html.twig
@@ -10,11 +10,10 @@
 <body>
 <div class="main">
     <div class="congrats">
-        <h1 class="congrats__title">Поздравляем! Вы сокрушили Демона и спасли мир! Ваши подвиги войдут в легенды!</h1>
+        <h1 class="congrats__title">Поздравляем! <br> Вы сокрушили Демона и спасли мир! <br> О Ваших подвигах будут сложены легенды!</h1>
     </div>
-    <img class="demon_dead_image" src="images/Enemy/demon_dead.png" alt="demon dead">
     <div class="qr">
-        <h2 class="qr__title">Хотите заработать больше очков?</h2>
+        <img class="demon_dead_image" src="images/Enemy/demon_dead.png" alt="demon dead">
         <img class="qr__demon-kombat" src="/qrcode-generate" alt="demon">
     </div>
 </div>
