--- a/public/css/demon_kombat_screensaver_style.css
+++ b/public/css/demon_kombat_screensaver_style.css
@@ -48,7 +48,7 @@ body {
     color: rgba(255, 255, 255, 1);
     margin: 5vh 0 0 0;
     padding: 30px;
-    border-radius: 30px;
+    border-radius: 0;
 }
 
 .qr__demon-kombat {
