--- a/public/css/legend_style.css
+++ b/public/css/legend_style.css
@@ -29,7 +29,8 @@ body {
 }
 
 h1 {
-    font: 400 50px/100px "Miltonian Tattoo", sans-serif;
+    font: 700 50px/100px "Amatic SC", sans-serif;
+    text-shadow: 2px -3px 3px red;
     color: rgba(255, 255, 255, 1);
     text-align: center;
 }
