--- a/templates/choose_level.html.twig
+++ b/templates/choose_level.html.twig
@@ -37,23 +37,34 @@
 </div>
 <a class="previous-page" href="/menu">Вернуться</a>
 <script>
-  let audio = new Audio('/sounds/doom.mp3');
-      let music = false;
-      audio.volume = 1;
-      audio.loop = true;
+  const but1 = document.getElementById('but1');
+  const but2 = document.getElementById('but2');
+  const but3 = document.getElementById('but3');
+  
+  let audio = new Audio('/sounds/press.mp3');
+      audio.volume = 0.8;
+      audio.loop = false;
+      audio.load();
 
-      function startMusic() {
-        audio.load();
-        audio.play();
-        music = true;
-      }
+      
+      but1.addEventListener('mouseover', () => {
+          audio.play();
+      })
 
-      document.addEventListener('mousemove', function()
-      {
-          if (music === false) {
-            startMusic();
-          }
-      });
+      but2.addEventListener('mouseover', () => {
+          audio.play();
+      })
+
+      but3.addEventListener('mouseover', () => {
+          audio.play();
+      })
+
+      //document.addEventListener('mousemove', function()
+      //{
+      //    if (music === false) {
+      //      startMusic();
+      //    }
+      //});
 </script>
 </body>
 </html>
