--- a/templates/choose_level.html.twig
+++ b/templates/choose_level.html.twig
@@ -37,27 +37,26 @@
 </div>
 <a class="previous-page" href="/menu">Вернуться</a>
 <script>
-  const but1 = document.getElementById('but1');
-  const but2 = document.getElementById('but2');
-  const but3 = document.getElementById('but3');
-  
-  let audio = new Audio('/sounds/press.mp3');
-      audio.volume = 0.8;
-      audio.loop = false;
-      audio.load();
+ //const but1 = document.getElementById('but1');
+ //const but2 = document.getElementById('but2');
+ //const but3 = document.getElementById('but3');
+ //
+ //let audio = new Audio('/sounds/press.mp3');
+ //  audio.volume = 0.8;
+ //  audio.loop = false;
+ //  audio.load();
 
-      
-      but1.addEventListener('mouseover', () => {
-          audio.play();
-      })
+ //    
+ //  but1.addEventListener('mouseover', () => {
+ //      audio.play();
+ //  })
+ //  but2.addEventListener('mouseover', () => {
+ //      audio.play();
+ //  })
 
-      but2.addEventListener('mouseover', () => {
-          audio.play();
-      })
-
-      but3.addEventListener('mouseover', () => {
-          audio.play();
-      })
+ //  but3.addEventListener('mouseover', () => {
+ //      audio.play();
+ //  })
 
       //document.addEventListener('mousemove', function()
       //{
