--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -55,7 +55,7 @@
     const preloader = document.getElementById('preloader');
     let username = document.getElementById('username').value;
     let opponentname = 'bot';
-    const ws = new WebSocket('ws://10.10.28.39:8080');
+    const ws = new WebSocket('ws://localhost:8080');
     let isConnected = false;
     const messageQueue = [];
 
