2024-07-27-dev добавил кнопку с легендой в меню

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -24,6 +24,9 @@
       <img src="images/Icon/multiplayer_icon.svg">
     </a>
   </div>
-  <a class="signout" type="submit" href="/user/signout">Выйти</a>
+  <div class="buttons">
+    <a class="signout" type="submit" href="/user/signout">Выйти</a>
+    <a class="information" type="submit" href="/legend">?</a>
+  </div>
 </body>
 </html>
