--- a/public/css/menu_style.css
+++ b/public/css/menu_style.css
@@ -51,19 +51,33 @@ body {
 }
 
 .signout {
-    position: absolute;
     width: 100px;
     height: 50px;
     color: rgba(255, 255, 255, 1);
     font: 400 16px/20px "Russo One", sans-serif;
     background-color: rgba(103, 80, 164, 1);
     border-radius: 25px;
-    left: 20px;
-    bottom: 20px;
 }
 
 img {
     border-radius: 0;
     width: 120px;
     height: 120px;
+}
+
+.information {
+    width: 50px;
+    height: 50px;
+    color: rgba(255, 255, 255, 1);
+    font: 400 16px/20px "Russo One", sans-serif;
+    background-color: rgba(103, 80, 164, 1);
+    border-radius: 25px;
+    margin: 0 0 0 10px;
+}
+
+.buttons {
+    position: absolute;
+    display: flex;
+    left: 20px;
+    bottom: 20px;
 }
