--- a/templates/legend.html.twig
+++ b/templates/legend.html.twig
@@ -5,6 +5,7 @@
     <title>Legend</title>
     <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/legend_style.css">
     <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
 </head>
@@ -12,7 +13,7 @@
     <div class="main">
         <h1 class="center-align">Demon Deliverance</h1>
         <p class="center-align">
-            Корпорация "N" давно занимается исследованиями межпространственных путешествий в окрестностях Марса. Однако, последний эксперимент обернулся катастрофой: попытка телепортации с Деймоса на Фобос привела к открытию разлома в одной из лабораторий. Из этого разлома начали проникать демоны из самого ада.<br>
+            Корпорация "InterSpace Labs" давно занимается исследованиями межпространственных путешествий в окрестностях Марса. Однако, последний эксперимент обернулся катастрофой: попытка телепортации с Деймоса на Фобос привела к открытию разлома в одной из лабораторий. Из этого разлома начали проникать демоны из самого ада.<br>
             <br>
             Теперь ваша задача – закрыть разлом и остановить вторжение демонов в наш мир.<br>
             <br>
