--- a/templates/congrats.html.twig
+++ b/templates/congrats.html.twig
@@ -14,6 +14,7 @@
     </div>
     <div class="qr">
         <img class="demon_dead_image" src="images/Enemy/demon_gif.gif" alt="demon dead">
+        <p>Скорее забирайте свой приз:</p>
         <img class="qr__demon-kombat" src="images/rick_roll.png" alt="demon">
     </div>
 </div>
