misha-07-25-congrats-improvements добавил переход на меню при нажатии любой кнопки на странице поздравления

--- a/templates/congrats.html.twig
+++ b/templates/congrats.html.twig
@@ -18,5 +18,15 @@
         <img class="qr__demon-kombat" src="images/rick_roll.png" alt="demon">
     </div>
 </div>
+<script>
+	document.addEventListener('keydown', function()
+	{
+		window.location.href = '/menu';
+	});
+	document.addEventListener('mousedown', function()
+	{
+		window.location.href = '/menu';
+	});
+</script>
 </body>
 </html>
